--- a/index.html
+++ b/index.html
@@ -79,7 +79,26 @@
 			  </div>
 			</div>
 		</div>
-
+		<div class="modal" id="delete-success" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        <h5 class="modal-title" id="myModalLabel">You have deleted a song!</h5>
+			    </div>
+			  </div>
+			</div>
+		</div>
+		<div class="modal" id="delete-failure" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        <h5 class="modal-title" id="myModalLabel">Sorry, there was an error and your song was not deleted.</h5>
+			    </div>
+			  </div>
+			</div>
+		</div>
 		<script data-main="javascripts/entry" src="lib/bower_components/requirejs/require.js"></script>
 	</body>
 </html>
