--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	  <title>Music History pt. 5</title>
 	  <link rel="stylesheet" type="text/css" href="style.css">
 	</head>
-	<body>
+	<body ng-app="MusicHistory">
 			<nav id="navigation" class="bordered">
 				<ul>
 					<li><a href="#" id="view-music-link">View Music</a></li>
@@ -25,6 +25,7 @@
 				</ul>
 			</nav>
 		<!-- <div id="flex-container"> -->
+		<!--
 			<div id="add-music" class="bordered display-none">
 					<label class="displayblock">Song:<input name="song-name-input" type="text" id="song-name-input"></label>
 					<label class="displayblock">Artist:<input name="artist-name-input" type="text" id="artist-name-input"></label>
@@ -35,7 +36,7 @@
 				<div id="song-options-div" class="bordered form-style">
 					<label class="displayblock">Song length:<input type="range" name="song-length" class="displayblock center"></label>
 					<label class="displayblock">Artist:<select name="artist" class="displayblock center">
-						<!--<option value="options">Options</option>-->
+
 						<option value="alraune">Alraune</option>
 						<option value="baringTeeth">Baring Teeth</option>
 						<option value="converge">Converge</option>
@@ -43,7 +44,7 @@
 						<option value="egyptrixx">Egyptrixx</option>
 					</select></label>
 					<label class="displayblock">Album:<select name="album" class="displayblock center">
-						<!-- <option value="options">Options</option> -->
+
 						<option value="alrauneAlbum">The Process of Self-Immolation</option>
 						<option value="baringTeethAlbum">Ghost Chorus Among The Ruins</option>
 						<option value="convergeAlbum">When Forever Comes Crashing</option>
@@ -51,21 +52,18 @@
 						<option value="egyptrixxAlbum">A/B Til Infinity</option>
 					</select></label>
 					<p id="genre-title">Genre:</p>
-						<!-- <div id="left-genres"> -->
+
 							<label class="smaller-margin"><input type="checkbox" name="genre" value="genreBlackMetal">Black Metal</label>
 							<label class="smaller-margin"><input type="checkbox" name="genre" value="genreGrindcore">Grindcore</label>
 							<label class="smaller-margin"><input type="checkbox" name="genre" value="genreHardcore">Hardcore</label>
-						<!-- </div> -->
-						<!-- <div id="right-genres"> -->
+
 							<label class="smaller-margin"><input type="checkbox" name="genre" value="genreDeathMetal">Death Metal</label>
 							<label class="smaller-margin"><input type="checkbox" name="genre" value="genreElectronic">Electronic</label>
 							<label class="smaller-margin"><input type="checkbox" name="genre" value="genreHipHop">Hip hop</label>
-						<!-- </div>	 -->
+
 					<button class="displayblock center">Filter</button>
 				</div>
 				<div id="results" class="bordered">
-					<!--<p id="first-song-name" class="song-name"></p> -->
-				<!--
 					<p class="song-name">Exordium</p>
 					<span class="results-line results-artist">Alraune</span>
 					<span class="results-line results-divider">|</span>
@@ -90,10 +88,12 @@
 					<span class="results-line results-album">A/B Til Infinity</span>
 					<span class="results-line results-divider">|</span>
 					<span class="results-line results-genre">Electronic</span>
-					-->
+					
 				</div>
-		<!-- </div> -->
+		</div>
 		<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-		<script src="songs.js"></script>
+		<script src="songs.js"></script> -->
+		<script src="lib/bower_components/angular/angular.min.js"></script>
+		<script src="app/songs.js"></script>
 	</body>
 </html>
