--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	  <link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body ng-app="MusicHistory">
-<!-- 			<nav id="navigation" class="bordered">
+			<nav id="navigation" class="bordered">
 				<ul>
 					<li><a href="#" id="view-music-link">View Music</a></li>
 					<li>|</li>
@@ -23,12 +23,13 @@
 					<li>|</li>
 					<li><a href="#">Profile</a></li>
 				</ul>
-			</nav> -->
+			</nav>
 
 			<section ng-controller="SongsLogic">
 				<div id="results" class="bordered">
 					<div class='song-result' ng-repeat="song in songs"><p class='song-name'>{{song.title}}</p><span class='results-line results-artist'>{{song.artist}}</span><span class='results-line results-divider'>|</span><span class='results-line results-album'>{{song.album}}</span><button class='delete'>Delete</button></div>
-				<button class='more'>More</button>
+					<div class='song-result' ng-repeat="song in moreSongs"><p class='song-name'>{{song.title}}</p><span class='results-line results-artist'>{{song.artist}}</span><span class='results-line results-divider'>|</span><span class='results-line results-album'>{{song.album}}</span><button class='delete'>Delete</button></div>
+					<button class='more' ng-click="">More</button>
 				</div>
 			</section>
 				
