--- a/index.html
+++ b/index.html
@@ -25,16 +25,14 @@
 				</ul>
 			</nav>
 
+				
 			<section ng-controller="SongsLogic">
 				<div id="results" class="bordered">
 					<div class='song-result' ng-repeat="song in songs"><p class='song-name'>{{song.title}}</p><span class='results-line results-artist'>{{song.artist}}</span><span class='results-line results-divider'>|</span><span class='results-line results-album'>{{song.album}}</span><button class='delete'>Delete</button></div>
 					<div class='song-result' ng-repeat="song in moreSongs"><p class='song-name'>{{song.title}}</p><span class='results-line results-artist'>{{song.artist}}</span><span class='results-line results-divider'>|</span><span class='results-line results-album'>{{song.album}}</span><button class='delete'>Delete</button></div>
 					<button class='more' ng-click="">More</button>
 				</div>
-			</section>
-				
-		<!-- <div id="flex-container"> -->
-		<!--
+
 			<div id="add-music" class="bordered display-none">
 					<label class="displayblock">Song:<input name="song-name-input" type="text" id="song-name-input"></label>
 					<label class="displayblock">Artist:<input name="artist-name-input" type="text" id="artist-name-input"></label>
@@ -44,22 +42,22 @@
 			</div>
 				<div id="song-options-div" class="bordered form-style">
 					<label class="displayblock">Song length:<input type="range" name="song-length" class="displayblock center"></label>
-					<label class="displayblock">Artist:<select name="artist" class="displayblock center">
-
-						<option value="alraune">Alraune</option>
+					<label class="displayblock">Artist:<select ng-model="SongsLogic" ng-options="song.artist for song in songs" name="artist" class="displayblock center">
+				<!-- 		<option value="alraune">Alraune</option>
 						<option value="baringTeeth">Baring Teeth</option>
 						<option value="converge">Converge</option>
 						<option value="dendriticArbor">Dendritic Arbor</option>
-						<option value="egyptrixx">Egyptrixx</option>
+						<option value="egyptrixx">Egyptrixx</option> -->
 					</select></label>
-					<label class="displayblock">Album:<select name="album" class="displayblock center">
+					<label class="displayblock">Album:<select ng-model="SongsLogic" ng-options="song.album for song in songs" name="album" class="displayblock center">
 
-						<option value="alrauneAlbum">The Process of Self-Immolation</option>
+						<!-- <option value="alrauneAlbum">The Process of Self-Immolation</option>
 						<option value="baringTeethAlbum">Ghost Chorus Among The Ruins</option>
 						<option value="convergeAlbum">When Forever Comes Crashing</option>
 						<option value="dendriticArborAlbum">Romantic Love</option>
-						<option value="egyptrixxAlbum">A/B Til Infinity</option>
+						<option value="egyptrixxAlbum">A/B Til Infinity</option> -->
 					</select></label>
+			</section><!--
 					<p id="genre-title">Genre:</p>
 
 							<label class="smaller-margin"><input type="checkbox" name="genre" value="genreBlackMetal">Black Metal</label>
