--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	  <meta charset="utf-8">
 	  <title>Music History pt. Angular</title>
-	  <link rel="stylesheet" type="text/css" href="style.css">
+	  <link rel="stylesheet" type="text/css" href="styles/main.css">
 	</head>
 	<body ng-app="MusicHistory">
 			<nav id="navigation" class="bordered">
@@ -105,10 +105,13 @@
 		<script src="songs.js"></script> -->
 		<script src="lib/bower_components/angular/angular.min.js"></script>
 		<script src="lib/bower_components/angular-route/angular-route.js"></script>
+		<script src="lib/bower_components/firebase/firebase.js"></script>
+		<script src="lib/bower_components/angularfire/dist/angularfire.min.js"></script>
 		<!-- <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script> -->
 		<script src="app/app.js"></script>
 		<script src="app/factories/SongStorage.js"></script>
 		<script src="app/controllers/SongCtrl.js"></script>
 		<script src="app/controllers/SongFormCtrl.js"></script>
+		<script src="app/controllers/SongDetailCtrl.js"></script>
 	</body>
 </html>
